- Added callbacks for mouse-over. Added the corresponding `hoveredChildRegionColor` and `hoveredAndSelectedChildRegionColor` to the `PieMenuStyle`.
- Added `highlightedChildRegionColor` in the `PieMenuStyle`.
- The `PieMenuClickListener` now triggers a highlight on `touchDown` rather than waiting for the mouse to move after the initial click.
- The complementary callbacks (highlight and hover) are now regrouped within `PieMenuAdditionalChangeListener`.
- `HighlightChangeListener` renamed to `PieMenuHighlightChangeListener` and now extends EventListener. Removed the associated getter and setter: now `addListener()` should be used for that too.
- Widgets now start with their visibility set to `true` (it used to be `false`): this is to remain closer to scene2d's expected behavior.
- Changed the Actor-sizing algorithm (and thus fixed it for low `innerRadius` values).
- Integrated the propagation of the alpha from parent to children. Use the `setGlobalAlphaMultiplier(float)` method to do so.
- Fix for Widgets contained within a Table.
- Fix of the PieMenuStyle Colors-duplication.
- Style's `Circumference` values now include the `innerRadius` value.
- New API methods to allow more customization: `getActorDistanceFromCenter`, `getEstimatedRadiusAt`  and `adjustActorSize` can be changed to be whatever you want.
- Removed from the API the `@Deprecated` methods which should have been implemented by the users themselves anyway. This is reflected in the corresponding code-examples.

[2.2.0]
- Animated versions of the implementations are now available!

[2.1.0]
- Added a `defaultIndex` flag as a fallback value when an invalid index is being selected.
- Minor fix on the `PieMenu`'s `hit` method.

[2.0.0]
- The default of `infiniteSelectionRange` is now `false`.
- Removed the PieMenu.SuggestedClickListener inner class and made it its own class: `PieMenuSuggestedClickListener`.