@@ -5,7 +5,7 @@
 - Added callbacks for mouse-over. Added the corresponding `hoveredChildRegionColor` and `hoveredAndSelectedChildRegionColor` to the `PieMenuStyle`.
 - Added `highlightedChildRegionColor` in the `PieMenuStyle`.
 - The `PieMenuClickListener` now triggers a highlight on `touchDown` rather than waiting for the mouse to move after the initial click.
-- The complementary callbacks (highlight and hover) are now regrouped within `PieMenuAdditionalChangeListener`.
+- The complementary callbacks (highlight and hover) are now regrouped within `PieMenuCallbacks`.
 - `HighlightChangeListener` renamed to `PieMenuHighlightChangeListener` and now extends EventListener. Removed the associated getter and setter: now `addListener()` should be used for that too.
 - Widgets now start with their visibility set to `true` (it used to be `false`): this is to remain closer to scene2d's expected behavior.
 - Changed the Actor-sizing algorithm (and thus fixed it for low `innerRadius` values).
@@ -15,6 +15,7 @@
 - Style's `Circumference` values now include the `innerRadius` value.
 - New API methods to allow more customization: `getActorDistanceFromCenter`, `getEstimatedRadiusAt`  and `adjustActorSize` can be changed to be whatever you want.
 - Removed from the API the `@Deprecated` methods which should have been implemented by the users themselves anyway. This is reflected in the corresponding code-examples.
+- `setDefaultIndex` now changes the `selectedIndex` if it isn't a valid index.
 
 [2.2.0]
 - Animated versions of the implementations are now available!
